@@ -22,8 +22,6 @@ if ($#ARGV != 1) {
     exit 1;
 }
 
-error 'This command needs to be executed as root' if $> != 0;
-
 ($version) = $ARGV[0] =~ /^(\d+\.\d+)$/;
 ($cluster) = $ARGV[1] =~ /^([-.\w]+)$/;
 error 'invalid version' unless defined $version;
