@@ -209,8 +209,6 @@ if ($#ARGV < 1) {
     exit 1;
 }
 
-error 'This command needs to be executed as root' if $> != 0;
-
 ($version) = $ARGV[0] =~ /^(\d+\.\d+)$/;
 ($cluster) = $ARGV[1] =~ /^([-.\w]+)$/;
 my $datadir;
